--- a/School-3/sass/main.scss
+++ b/School-3/sass/main.scss
@@ -17,8 +17,8 @@
 @import "./pages/about";
 @import "./pages/academic";
 @import "./pages/gallary";
-@import "./pages/magazine";
-@import "./pages/news";
+@import "./pages/contact";
+@import "./pages/student";
 @import  "./pages/notice";
 @import "./pages/onlineclass";
 @import "./pages/onlineaddmission";
