--- a/School-3/sass/pages/_home.scss
+++ b/School-3/sass/pages/_home.scss
@@ -5,11 +5,12 @@
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(4, 1fr);
+    
     justify-content: center;
     .grid__chaild {
         margin: 20px 0;
         min-height: 300px;
-        background-color: rgb(255, 163, 163);
+        // background-color: rgb(255, 163, 163);
         .leftnotice__nav__box {
             background-color: #fff;
             border-radius: 10px;
@@ -30,6 +31,11 @@
                     }
                 }
             }
+        }
+        .center__top__section {
+            background-color: #fff;
+            border-radius: 10px;
+            padding: 10px;
         }
         .perabout__box {
             padding: 10px;
