--- a/School-4/sass/main.scss
+++ b/School-4/sass/main.scss
@@ -10,11 +10,20 @@
 @import "./layout/header";
 
 
+@import "./component/buttons";
+
+
+@import "./pages/home";
 @import "./pages/about";
 @import "./pages/academic";
 @import "./pages/gallary";
-@import "./pages/magazine";
-@import "./pages/news";
+@import "./pages/contact";
+@import "./pages/student";
 @import  "./pages/notice";
 @import "./pages/onlineclass";
-@import "./pages/onlineaddmission.scss";
+@import "./pages/onlineaddmission";
+
+.big__gap {
+    height: 700px;
+    background-color: #000;
+}
